Wrong display of Rolling code

--- a/SIC43NT_Webserver/Pages/Index.cshtml
+++ b/SIC43NT_Webserver/Pages/Index.cshtml
@@ -46,7 +46,7 @@
     </tr>
     <tr>
         <th>Rolling code(HEX)</th>
-        <td>@Model.rollingCodeServer</td>
+        <td>@Model.rollingCodeTag</td>
         <td>@Model.rollingCodeServer</td>
         <td>@Model.rollingCodeDecision</td>
     </tr>
