Add Azure Table Storage Access to project.

--- a/SIC43NT_Webserver/Pages/Index.cshtml
+++ b/SIC43NT_Webserver/Pages/Index.cshtml
@@ -40,7 +40,7 @@
     </tr>
     <tr>
         <th>Time Stamp(DEC)</th>
-        <td>@Model.timeStampTag_uint</td>
+        <td>@Model.timeStampTag_str</td>
         <td>@Model.timeStampServer_str</td>
         <td>@Model.timeStampDecision</td>
     </tr>
